# lecture-align-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CODEX_OSS_APPLICATION_EVIDENCE.md  OPENAI_CODEX_OSS_FORM_DRAFT.md
examples/synthetic_lecture/: slides.md  transcript.srt
src/lecture_align_kit/: __init__.py  align.py  cli.py  slides.py  srt.py
tests/: test_slides_align.py  test_srt.py
