[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture-align-kit"
version = "0.1.0"
description = "Local-first utilities for aligning lecture slide text with SRT transcript cues."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Project contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
lecture-align = "lecture_align_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
